wrapped everything in a function and fixed my issue with setTimeout.

--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ p{
   width: 50px;
   background-color:  #B21B00;
   color: white;
-  font-size:12px;
+  font-size:11px;
 
 }
 .button:focus {
